Chaneged Player name to Nickname
