# src/DavesDartsClub.WebApi/Controllers/PlayerController.PlayerResponse.cs
@@ -2,6 +2,5 @@
 
 public class PlayerResponse
 {
-    public Guid PlayerId { get; set; }
-    public string PlayerName { get; set; } = string.Empty;
+      public string PlayerName { get; set; } = string.Empty;
 }
