# src/DavesDartsClub.WebApi/swagger/DavesDartsClub.WebApi.json
@@ -367,7 +367,7 @@
         }
       }
     },
-    "/Player/{playerId}": {
+    "/Player/{memberId}": {
       "get": {
         "tags": [
           "Player"
@@ -375,7 +375,7 @@
         "operationId": "GetPlayerByMemberId",
         "parameters": [
           {
-            "name": "playerId",
+            "name": "memberId",
             "in": "path",
             "required": true,
             "schema": {
@@ -414,7 +414,7 @@
         "operationId": "DeletePlayer",
         "parameters": [
           {
-            "name": "playerId",
+            "name": "memberId",
             "in": "path",
             "required": true,
             "schema": {
@@ -707,10 +707,6 @@
       "PlayerResponse": {
         "type": "object",
         "properties": {
-          "playerId": {
-            "type": "string",
-            "format": "uuid"
-          },
           "playerName": {
             "type": "string"
           }
